Interrupt creation operation when a blank package or project name is provided